<resources>
    <string name="app_name">Planner</string>
    <string name="tell_me">Tell me what to keep in mind…</string>
    <string name="task_input">Enter a title for this task …</string>
    <string name="task_description">Add a more detailed description …</string>
    <string name="due_date">Due date</string>
    <string name="set_reminder">Set reminder for…</string>
    <string name="set_priority">Set priority</string>
    <string name="regular">Regular</string>
    <string name="important">Important</string>
    <string name="essential">Essential</string>
    <string name="plus">+</string>
    <string name="what_else_are_you_gonna_do_today">What else are you gonna do today?</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="settings_menu_title">Settings</string>

    <!-- Preference Titles -->
    <string name="theme_header">Theme</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Select theme</string>
    <string name="settings_activity_title">Settings</string>

    <!-- Bottom Navigation -->
    <string name="task_nav_menu_title">Tasks</string>
    <string name="daily_nav_menu_title">Daily</string>
    <string name="motivation_nav_menu_title">Motivation</string>
    <string name="MotivationFragmentTitle">Motivation</string>
    <string name="DailyFragmentTitle">Today\'s Plan</string>
    <string name="Tasks">Upcoming Tasks</string>

    <!-- New task form -->
    <string name="task_title_required_error">Task title cannot be empty</string>
    <string name="add_new_task_content_descriptor">Add a new task</string>
    <string name="confirm_form_button">Confirm</string>
    <string name="dueDateFormatSpecifier">Due Date: %1$s</string>
    <string name="dueTimeFormatSpecifier">Due Time: %1$s</string>
    <string name="reminderDateFormatSpecifier">Reminder Date: %1$s</string>
    <string name="reminderTimeFormatSpecifier">Reminder Time: %1$s</string>

    <string name="tell_me_about_your_goals_and_manifestos">Tell me about your goals and manifestos</string>
    <string name="dot">.</string>

    <!-- Task Detail -->
    <string name="taskDetailDueTimeTitle">Due Time:</string>
    <string name="taskDetailReminderTimeTitle">Reminder:</string>
    <string name="add_new_daily_task_content_descriptor">Add new daily task</string>

    <!-- Create DailyTask -->
    <string name="dailyTaskStartTimeButton">Start Time</string>
    <string name="dailyTaskEndTimeButton">End Time</string>
    <string name="CreateTaskActivityLabel">Add New Task</string>

    <!-- DailyTask Detail -->
    <string name="dailyTaskDetailStartTimeTitle">Start Time:</string>
    <string name="dailyTaskDetailEndTimeTitle">End Time:</string>
    <string name="motivationEditTextHint">Write down something that motivates you …</string>
    <string name="createMotivationActivityLabel">New Motivation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_motivational_sentence">Never Give Up!</string>
</resources>