<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.views.CreateDailyTaskActivity"
android:orientation="vertical"
android:paddingHorizontal="30dp"
android:paddingTop="30dp"
android:paddingBottom="15dp">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/dailyTaskNameInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:errorEnabled="false" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dailyTaskNameTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_input" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dailyTaskDescriptionTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description" />
</com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dailyTaskStartTimeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_access_time_24"
            app:iconGravity="textStart"
            android:layout_weight="0.5"
            android:layout_marginEnd="1dp"
            android:text="@string/dailyTaskStartTimeButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dailyTaskEndTimeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_access_time_24"
            app:iconGravity="textStart"
            android:layout_weight="0.5"
            android:layout_marginStart="1dp"
            android:text="@string/dailyTaskEndTimeButton" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
